--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
+flask-restx==1.2.0
 idna==3.10
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-numpy==2.0.2
+numpy==1.26.4
 opencv-python==4.9.0.80
-pandas==2.2.3
+pandas==2.0.3
 PyExecJS==1.5.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
