--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.8
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 flask-restx==1.2.0
+flask-cors==4.0.0
 idna==3.10
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
