--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
+aniso8601==10.0.0
+attrs==25.1.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+flask-cors==5.0.1
+flask-restx==1.3.0
 Flask-SQLAlchemy==3.1.1
-flask-restx==1.2.0
-flask-cors==4.0.0
 idna==3.10
 importlib_metadata==8.6.1
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
 numpy==1.26.4
 opencv-python==4.9.0.80
@@ -17,10 +22,13 @@ pandas==2.0.3
 PyExecJS==1.5.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.23.1
 six==1.17.0
 SQLAlchemy==2.0.27
 tqdm==4.66.1
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
