--- a/requirements.txt
+++ b/requirements.txt
@@ -16,20 +16,7 @@ Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
-numpy==1.26.4
-opencv-python==4.9.0.80
-pandas==2.0.3
-PyExecJS==1.5.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.23.1
-six==1.17.0
-SQLAlchemy==2.0.27
-tqdm==4.66.1
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-Werkzeug==3.1.3
-zipp==3.21.0
+numpy
+pandas
+PyExecJS
+python-dateutil
